More blur-env options.